plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	
	exclusiveContent {
		forRepository {
			maven {
				name = "Modrinth"
				url = "https://api.modrinth.com/maven"
			}
		}
		filter {
			includeGroup "maven.modrinth"
		}
	}

	mavenCentral()
}

loom {
	accessWidenerPath = file("src/main/resources/nbteditor.accesswidener")

	// The dev client and server share a 7.8G host with a VM on it, so neither gets
	// to take the JVM default of a quarter of RAM. See scripts/dev-client.sh.
	runs {
		client {
			vmArgs "-Xms256m", "-Xmx1G", "-Dnbte.devrun=client"
			// -Pjoin=host:port sends the client straight into a world, which is the only
			// place item components are bound. See scripts/dev-client.sh --join.
			if (project.hasProperty("join")) {
				programArgs "--quickPlayMultiplayer", project.property("join")
			}
			// -Pdevscreens[=lore] runs misc/DevScreenSweep once joined, which is the only
			// thing in the build that opens an editor screen at all.
			if (project.hasProperty("devscreens")) {
				vmArgs "-Dnbte.devscreens=" + project.property("devscreens")
			}
			if (project.hasProperty("devscreensFrom")) {
				vmArgs "-Dnbte.devscreens.from=" + project.property("devscreensFrom")
			}
			if (project.hasProperty("devscreensNbt")) {
				vmArgs "-Dnbte.devscreens.nbt=" + project.property("devscreensNbt")
			}
		}
		server {
			runDir = "run/server"
			vmArgs "-Xms256m", "-Xmx1G", "-Dnbte.devrun=server"
		}
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	
	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	
	// Uncomment the following line to enable the deprecated Fabric API modules. 
	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
	
	// implementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
	
	implementation "maven.modrinth:modmenu:20.0.2"
	implementation "maven.modrinth:nbt-autocomplete:1.3.15-fabric-26.2"

	testImplementation platform("org.junit:junit-bom:5.11.4")
	testImplementation "org.junit.jupiter:junit-jupiter"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

processResources {
	inputs.property "version", project.version
	
	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "archivesName", project.base.archivesName
	
	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

def getGitHash() {
	return "git rev-parse --verify --short HEAD".execute().text.trim()
}

// The jar name carries the commit it was built from.
jar {
	archiveClassifier = getGitHash()
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}
	
	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

// Only the pure-JVM utility classes are covered. Anything that touches the Minecraft
// client (registries, MinecraftClient, the run directory) cannot run here without a
// Fabric launch — see docs/AUDIT-2026-09-14.md, item 4.
test {
	useJUnitPlatform()
	testLogging {
		events 'passed', 'skipped', 'failed'
	}
}
// Mixin configs name their classes as plain strings, so a rename or deletion that misses the
// JSON compiles clean and only surfaces as a crash at game launch. Fail the build instead.
// ponytail: source-file existence only; the toggled names the mixin plugins add at runtime,
// and the @Mixin targets = "..." strings, are still unchecked.
tasks.register("validateMixinConfigs") {
	def configs = fileTree("src/main/resources").matching { include "*.mixins.json" }
	def sourceDir = file("src/main/java")
	inputs.files(configs)
	inputs.dir(sourceDir)
	doLast {
		def missing = []
		configs.each { config ->
			def json = new groovy.json.JsonSlurper().parse(config)
			def pkg = json["package"]
			["mixins", "client", "server"].each { side ->
				(json[side] ?: []).each { name ->
					if (!new File(sourceDir, "${pkg}.${name}".replace(".", "/") + ".java").exists())
						missing << "${config.name} ${side}: ${pkg}.${name}"
				}
			}
		}
		if (!missing.isEmpty())
			throw new GradleException("Mixin classes named in a config but absent:\n\t" + missing.join("\n\t"))
	}
}
check.dependsOn validateMixinConfigs

// The configs above only prove the mixin classes exist. tools/check-mixin-targets.py
// resolves what each one points *at* against the mapped jar: the target class, the
// `method` selector, the `@At` member, and whether the selected method's bytecode
// really contains that call. A stale name there compiles and remaps clean and fails
// at launch, and a mixin on a screen class does not fail until that screen opens.
tasks.register("checkMixinTargets") {
	def script = file("tools/check-mixin-targets.py")
	def sources = fileTree("src/main/java") { include "**/mixin/**/*.java" }
	def classpath = configurations.compileClasspath
	inputs.files(script, sources)
	onlyIf {
		if ("which python3".execute().waitFor() == 0) return true
		logger.warn("checkMixinTargets: no python3, skipping")
		false
	}
	doLast {
		if (!classpath.any { it.name.startsWith("minecraft-merged") })
			throw new GradleException("no mapped Minecraft jar on the compile classpath")
		def proc = new ProcessBuilder("python3", script.absolutePath, classpath.asPath)
				.directory(projectDir).redirectErrorStream(true).start()
		proc.inputStream.eachLine { logger.lifecycle(it) }
		if (proc.waitFor() != 0)
			throw new GradleException("mixin targets do not resolve against the compile classpath")
	}
}
check.dependsOn checkMixinTargets
